--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "name": "math-project",
     "version": "1.0.0",
     "author": "PahkaSoft",
+    "license": "MIT",
     "private": true,
-    "license": "zlib",
     "workspaces": [
         "./packages/*",
         "./apps/*"
