--- a/packages/math-lib/package.json
+++ b/packages/math-lib/package.json
@@ -2,8 +2,8 @@
     "name": "math-lib",
     "version": "1.0.0",
     "author": "PahkaSoft",
+    "license": "MIT",
     "private": true,
-    "license": "zlib",
     "description": "",
     "main": "./dist/math-lib.umd.js",
     "types": "./dist/types/index.d.ts",
