--- a/apps/math-app/package.json
+++ b/apps/math-app/package.json
@@ -8,7 +8,7 @@
     "dependencies": {
         "@mdi/js": "^7.4.47",
         "@tspro/math-lib": "^1.0.0",
-        "@tspro/ts-utils-lib": "^1.20.0",
+        "@tspro/ts-utils-lib": "file:../../../ts-utils-lib",
         "bootstrap": "^5.3.8",
         "core-js": "^3.46.0",
         "react": "^19.2.0",
