chore: move deps to devDeps.

--- a/apps/math-app/package.json
+++ b/apps/math-app/package.json
@@ -5,29 +5,27 @@
     "license": "MIT",
     "private": true,
     "description": "",
-    "dependencies": {
-        "@mdi/js": "^7.4.47",
-        "@tspro/math-lib": "^1.0.0",
-        "@tspro/ts-utils-lib": "^2.0.0",
-        "bootstrap": "^5.3.8",
-        "core-js": "^3.46.0",
-        "react": "^19.2.0",
-        "react-bootstrap": "^2.10.10",
-        "react-dom": "^19.2.0",
-        "regenerator-runtime": "^0.14.1"
-    },
     "devDependencies": {
         "@babel/cli": "^7.28.3",
         "@babel/core": "^7.28.5",
         "@babel/preset-env": "^7.28.5",
         "@babel/preset-react": "^7.28.5",
+        "@mdi/js": "^7.4.47",
+        "@tspro/math-lib": "^1.0.0",
+        "@tspro/ts-utils-lib": "^2.2.0",
         "@types/react": "^19.2.2",
         "@types/react-dom": "^19.2.2",
         "@webpack-cli/serve": "^3.0.1",
         "babel-loader": "^10.0.0",
+        "bootstrap": "^5.3.8",
+        "core-js": "^3.46.0",
         "css-loader": "^7.1.2",
         "html-webpack-plugin": "^5.6.4",
         "npm-watch": "^0.13.0",
+        "react": "^19.2.0",
+        "react-bootstrap": "^2.10.10",
+        "react-dom": "^19.2.0",
+        "regenerator-runtime": "^0.14.1",
         "style-loader": "^4.0.0",
         "ts-loader": "^9.5.4",
         "tsup": "^8.5.0",
